--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,9 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "anhskohbo/no-captcha": "^3.6",
         "laravel/framework": "^11.9",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "spatie/laravel-honeypot": "^4.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
